# chonk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/chonk/: __init__.py
src/chonkster/: __init__.py  _chonk.py  _convert.py  _models.py
tests/: conftest.py  test_chonk.py  test_convert.py  test_models.py
