[project]
name = "chonkster"
version = "0.0.2"
description = "Turn your documents into an analytics-ready wide table."
authors = [
  {name = "Johnson Kuan", email = "johnson@queryboost.com"},
]
keywords = ["chonkster", "chonk", "documents", "tables", "analytics", "parsing"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "docling>=2.0.0",
    "pandas>=1.5",
    "pydantic>=2.0",
]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License"
]

[project.urls]
Homepage = "https://queryboost.com"

[tool.uv]
managed = true
required-version = ">=0.5.0"
dev-dependencies = [
    "pyright==1.1.406",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = ["hatchling==1.26.3", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/*"]

[tool.hatch.build.targets.wheel]
packages = ["src/chonkster"]

[tool.hatch.build.targets.sdist]
include = [
  "/*.toml",
  "/*.lock",
  "/*.md",
  "src/*",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[tool.ruff]
line-length = 120
output-format = "grouped"
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  # isort
  "I",
  # bugbear rules
  "B",
  # remove unused imports
  "F401",
  # bare except statements
  "E722",
  # unused arguments
  "ARG",
  # print statements
  "T201",
  "T203",
  # misuse of typing.TYPE_CHECKING
  "TC004",
  # import rules
  "TID251",
]
ignore = [
  # mutable defaults
  "B006",
]
unfixable = [
  # disable auto fix for print statements
  "T201",
  "T203",
]

[tool.ruff.lint.isort]
length-sort = true
length-sort-straight = true
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
known-first-party = ["chonkster", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
filterwarnings = [
  "error"
]

[tool.pyright]
ignore = ["**/docling", "**/docling_core"]

[tool.mypy]

[[tool.mypy.overrides]]
module = [
  "docling.*",
  "docling_core.*",
  "pandas.*",
]
ignore_missing_imports = true
